// Copyright 2019, OpenTelemetry Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package experimental;

import "telemetry_data.proto";

option java_multiple_files = true;
option java_package = "io.opentelemetry.proto.logs.v1";
option java_outer_classname = "LogsProto";

// A collection of logs from a Resource.
message ResourceLogs {
    // The resource for the spans in this message.
    // If this field is not set then no resource info is known.
    Resource resource = 1;

    // A list of Logs that originate from a resource.
    repeated Log logs = 2;
}


message Log {
    fixed64 time_unixnano = 1;
    bytes trace_id = 2;
    bytes span_id = 3;
    string type = 4;
    AttributeValue body = 5;
    uint64 flags = 6;
    repeated AttributeKeyValue attributes = 7;
    uint32 dropped_attributes_count = 8;
}
